<resources>
    <string name="app_name">HomeWork2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_profile">Profile</string>
    <string name="menu_main">Main</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_music">Music</string>
    <string name="menu_friends">News</string>
    <string name="friends">Friends</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="information_fragment">Information Fragment</string>
    <string name="search_music">Search Music</string>
    <string name="music_fragment">Music Fragment</string>
    <string name="date">Date:</string>
</resources>